Aj: changement des dossiers

--- a/Course/client/src/styles.css
+++ b/Course/client/src/styles.css
@@ -3,7 +3,7 @@
 body {
     margin: 0px;
     padding: 0px;
-    background-image: url("http://www.dream-wallpaper.com/free-wallpaper/game-wallpaper/car-game-wallpaper/1920x1200/free-wallpaper-32.jpg");
+    background-image: url("https://mosthdwallpapers.com/wp-content/uploads/2016/05/Best-Car-Racing-Games-Wallpaper.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
