AJ: ajout d'un rank pour le tableau de positions

--- a/Course/client/src/app/tableauScore/tableauScore.component.html
+++ b/Course/client/src/app/tableauScore/tableauScore.component.html
@@ -9,7 +9,7 @@
         </thead>
         <tbody>
             <tr *ngFor="let i of temps">
-                <th scope="row"></th>
+                <th scope="row">{{i.position}}</th>
                 <td>{{i.nom}}</td>
                 <td>{{i.valeur}}</td>
             </tr>
