AJ: changement dans fin de partie

--- a/Course/client/src/app/finDepartie/finDePartie.component.html
+++ b/Course/client/src/app/finDepartie/finDePartie.component.html
@@ -2,3 +2,7 @@
 <br>
 <app-tableauscore-component></app-tableauscore-component>
 <app-rating></app-rating>
+<div>
+    <button>Rejouer</button>
+    <button (click)="allerAuMenuPrincipale()">Revenir à la liste de pistes</button>
+</div>
