--- a/Course/client/src/app/finDepartie/finDePartie.component.html
+++ b/Course/client/src/app/finDepartie/finDePartie.component.html
@@ -1,8 +1,10 @@
 <br>
 <br>
-<app-tableauscore-component></app-tableauscore-component>
-<app-rating></app-rating>
 <div>
-    <button>Rejouer</button>
+    <app-tableauscore-component></app-tableauscore-component>
+    <app-rating></app-rating>
+</div>
+<div>
+    <button (click)="jouerUneNouvellePartie()">Rejouer</button>
     <button (click)="allerAuMenuPrincipale()">Revenir à la liste de pistes</button>
 </div>
