--- a/Course/client/src/app/rating/rating.component.html
+++ b/Course/client/src/app/rating/rating.component.html
@@ -1,9 +1,9 @@
-<div class="col-md-8 col-md-offset-2" *ngIf="!veutVoter">
+<div class="col-md-8 col-md-offset-2" *ngIf="!veutVoter || !affichage">
     <h2>Voulez vous donner votre avis sur la course que vous venez de faire?</h2>
     <button><i class="fa fa-thumbs-up" aria-hidden="true" (click)=onClick1()></i></button>
     <button><i class="fa fa-thumbs-down" aria-hidden="true" (click)=onClick()></i></button>
 </div>
-<div class="col-md-8 col-md-offset-2" *ngIf="veutVoter">
+<div class="col-md-8 col-md-offset-2" *ngIf="veutVoter || affichage">
     <form class="rating">
         <label>
       <input type="radio" name="stars" value="1" (click)="rating($event)"/>
