--- a/Course/client/src/app/generateurPiste/generateurpiste.component.html
+++ b/Course/client/src/app/generateurPiste/generateurpiste.component.html
@@ -3,4 +3,4 @@
 <div #container></div>
 <br>
 
-<button (click)="allerAFinPartie()">Fin de partie</button>
+<button (click)="allerTableauDeResultats()">Resultat Partie</button>
