JGR: Avancement affichage tete haute.

--- a/Course/client/src/app/affichageTeteHaute/affichagetetehaute.component.html
+++ b/Course/client/src/app/affichageTeteHaute/affichagetetehaute.component.html
@@ -8,10 +8,10 @@
             <td>temps (total)</td>
         </tr>
         <tr>
-            <td>1 sur 4</td>
+            <td>{{position}} sur {{nombreVoiture}}</td>
             <td>1 sur 3</td>
-            <td>20,00s</td>
-            <td>30,00s</td>
+            <td>{{tempsTour}}s</td>
+            <td>{{tempsTotal}}s</td>
         </tr>
     </table>
 
