JGR: Affichage fin sauf position. Fix synchronisation des événements selon FPS. Fix nombre de tours.

--- a/Course/client/src/app/affichageTeteHaute/affichagetetehaute.component.html
+++ b/Course/client/src/app/affichageTeteHaute/affichagetetehaute.component.html
@@ -8,8 +8,8 @@
             <td>temps (total)</td>
         </tr>
         <tr>
-            <td>{{position}} sur {{nombreVoiture}}</td>
-            <td>1 sur 3</td>
+            <td>À OBTENIR sur {{nombrePilotes}}</td>
+            <td>{{tourCourant}} sur {{nombreTours}}</td>
             <td>{{tempsTour}}s</td>
             <td>{{tempsTotal}}s</td>
         </tr>
