--- a/Course/client/src/app/rating/rating.component.html
+++ b/Course/client/src/app/rating/rating.component.html
@@ -1,3 +1,5 @@
+<app-tableauscore-component></app-tableauscore-component>
+<br>
 <div *ngIf="affichage">
     <div class="col-md-8 col-md-offset-2" *ngIf="!veutVoter">
         <h2>Voulez vous donner votre avis sur la course que vous venez de faire?</h2>
