--- a/Course/client/src/app/pisteValidator/pisteValidation.component.html
+++ b/Course/client/src/app/pisteValidator/pisteValidation.component.html
@@ -16,6 +16,17 @@
             <label for="description">Description</label>
             <input type="text" class="form-control" ngModel name="description" required>
         </div>
+        
+        <div class="form-group col-md-0 col-md-offset-0">
+                <button type="button" name="nidDePoule" class="btn btn-primary" (click)="ajouterElementDePiste($event)">Nids de poules</button>
+                <button type="button" class="btn btn-secondary">Repositionner</button>
+                <button type="button" name="flaqueDEau" class="btn btn-primary" (click)="ajouterElementDePiste($event)">Flaques d'eau</button>
+                <button type="button" class="btn btn-secondary">Repositionner</button>
+                <button type="button" name="accelerateur" class="btn btn-primary" (click)="ajouterElementDePiste($event)">Accelerateurs</button>
+                <button type="button" class="btn btn-secondary">Repositionner</button>
+        </div>
+       
+
         <button class="btn btn-success" type="submit" [class.btn-warning]="buttonText == 'Modifier circuit'" [disabled]="!f.form.valid">{{buttonText}}</button>
     </form>
 </div>
