--- a/Course/client/src/app/createurPiste/createurPiste.component.html
+++ b/Course/client/src/app/createurPiste/createurPiste.component.html
@@ -4,6 +4,6 @@
     <strong>Success! </strong><br>Votre dessin est terminé mais vous pouvez le modifier encore.</h4>
 <br>
 <br>
-<div #container (contextmenu)="oncontextmenu()" (click)="onMouseClick($event)" (mousemove)="onMouseMove($event)" (mousedown)="onMouseDown($event)" (mouseup)="onMouseUp($event)"></div>
+<div #container (contextmenu)="oncontextmenu()" (click)="sourisClique($event)" (mousemove)="sourisDeplacement($event)" (mousedown)="sourisBas($event)" (mouseup)="sourisRelache($event)"></div>
 <br>
-<app-pistevalidator-component *ngIf="estValide()" [pisteAmodifier]="pisteAmodifier"></app-pistevalidator-component>
+<app-pistevalidator-component *ngIf="estValide()" [pisteAmodifier]="pisteAModifier"></app-pistevalidator-component>
