--- a/Course/client/src/app/accueil/accueil.component.html
+++ b/Course/client/src/app/accueil/accueil.component.html
@@ -1,8 +1,8 @@
 <div class="btn-group" data-toggle="buttons" class="radio">
     <label class="btn btn-primary">
-            <input (click)="clickerAdmin()" name="options" id="option1" type="radio" checked>Administrateur
+            <input (click)="cliquerAdmin()" name="options" id="option1" type="radio" checked>Administrateur
         </label>
     <label class="btn btn-primary">
-            <input (click)="clickerJoueur()" name="options" id="option2" type="radio">Joueur
+            <input (click)="cliquerJoueur()" name="options" id="option2" type="radio">Joueur
         </label>
 </div>
