JGR: ass. qualite admin.

--- a/Course/client/src/app/accueil/admin/modificationMotDepasse/modificationMotDePasse.component.html
+++ b/Course/client/src/app/accueil/admin/modificationMotDepasse/modificationMotDePasse.component.html
@@ -6,11 +6,11 @@
         </div>
         <div class="form-group">
             <label for="email">Ancien mot de passe</label>
-            <input type="password" class="form-control" ngModel name="motDePasse" required>
+            <input type="password" class="form-control" ngModel name="ancienMotDpass" required>
         </div>
         <div class="form-group">
             <label for="email">Nouveau mot de passe</label>
-            <input type="password" class="form-control" ngModel name="NmotDePasse" required>
+            <input type="password" class="form-control" ngModel name="nouveauMotDpass" required>
         </div>
         <button class="btn btn-danger" type="submit" [disabled]="!f.form.valid">Enregistrer</button>
     </form>
