JGR: ass qualite contraintes.

--- a/Course/client/src/app/affichageTeteHaute/affichagetetehaute.component.html
+++ b/Course/client/src/app/affichageTeteHaute/affichagetetehaute.component.html
@@ -8,7 +8,7 @@
             <td>temps (total)</td>
         </tr>
         <tr>
-            <td>À OBTENIR sur {{nombrePilotes}}</td>
+            <td>X sur {{nombrePilotes}}</td>
             <td>{{tourCourant}} sur {{nombreTours}}</td>
             <td>{{tempsTour}}s</td>
             <td>{{tempsTotal}}s</td>
