--- a/MotsCroises/client/src/app/choix_partie/choix-partie-view.component.html
+++ b/MotsCroises/client/src/app/choix_partie/choix-partie-view.component.html
@@ -7,21 +7,21 @@
       <div>
         <h2>Type de partie :</h2>
         <div *ngFor="let typePartie of types;">
-          <input type="radio" name="choixType" (click)="ajouterTypePartie(typePartie)" value={typePartie} required>
+          <input type="radio" name="choixType" (click)="ajouterTypePartie(typePartie)" value={typePartie} [checked]="typePartie === 0" required>
           {{typePartieValue[typePartie]}}
         </div>
       </div>
       <div>
         <h2>Niveau de difficulté :</h2>
         <div *ngFor="let niveauPartie of niveaux;">
-          <input type="radio" name="choixNiveau" (click)="ajouterNiveauPartie(niveauPartie)" value={niveauPartie} required>
+          <input type="radio" name="choixNiveau" (click)="ajouterNiveauPartie(niveauPartie)" value={niveauPartie} [checked]="niveauPartie === 0" required>
           {{niveauValue[niveauPartie]}}
         </div>
       </div>
       <div>
         <h2>Nombre de joueurs :</h2>
         <div *ngFor="let nbJoueur of nbJoueurs;">
-          <input type="radio" name="choixJoueurs" (click)="ajouterNbJoueursPartie(nbJoueur)" value={nbJoueur} required>
+          <input type="radio" name="choixJoueurs" (click)="ajouterNbJoueursPartie(nbJoueur)" value={nbJoueur} [checked]="nbJoueur === 0" required>
           {{nbJoueursValue[nbJoueur]}}
         </div>
       </div>
