YI: Message chargement grille + rename des fichiers

--- a/MotsCroises/client/src/app/choix_partie/choix-partie-view.component.html
+++ b/MotsCroises/client/src/app/choix_partie/choix-partie-view.component.html
@@ -29,6 +29,7 @@
     <button>Creer partie</button>
   </form>
   <button (click)="joindrePartieEnAttente()">Joindre une partie en attente</button>
+  <h2>{{messageChargement}}</h2>
 </div>
 
 
