--- a/Course/client/src/app/pisteValidator/pisteValidation.component.html
+++ b/Course/client/src/app/pisteValidator/pisteValidation.component.html
@@ -19,11 +19,11 @@
         
         <div class="form-group col-md-0 col-md-offset-0">
                 <button type="button" name="nidDePoule" class="btn btn-primary" (click)="ajouterElementDePiste($event)">Nids de poules</button>
-                <button type="button" name="nidDePouleRep" class="btn btn-secondary" (click)="repositionnerElements($event)" >Repositionner</button>
-                <button type="button" name="flaqueDEau" class="btn btn-primary" (click)="ajouterElementDePiste($event)">Flaques d'eau</button>
-                <button type="button" name="flaqueRep" class="btn btn-secondary" (click)="repositionnerElements($event)">Repositionner</button>
+                <button type="button" name="nidDePoule" class="btn btn-secondary" (click)="repositionnerElements($event)" >Repositionner</button>
+                <button type="button" name="flaque" class="btn btn-primary" (click)="ajouterElementDePiste($event)">Flaques d'eau</button>
+                <button type="button" name="flaque" class="btn btn-secondary" (click)="repositionnerElements($event)">Repositionner</button>
                 <button type="button" name="accelerateur" class="btn btn-primary" (click)="ajouterElementDePiste($event)">Accelerateurs</button>
-                <button type="button" name="accelerateurRep" class="btn btn-secondary" (click)="repositionnerElements($event)">Repositionner</button>
+                <button type="button" name="accelerateur" class="btn btn-secondary" (click)="repositionnerElements($event)">Repositionner</button>
         </div>
        
 
