--- a/MotsCroises/client/src/app/choix_partie/choix-partie-view.component.html
+++ b/MotsCroises/client/src/app/choix_partie/choix-partie-view.component.html
@@ -26,9 +26,11 @@
         </div>
       </div>
     </div>
-    <button>Creer partie</button>
+    <button [disabled]="partieEnRecherche">Creer partie</button>
   </form>
-  <button (click)="joindrePartieEnAttente()">Joindre une partie en attente</button>
+  <button (click)="joindrePartieEnAttente()" [disabled]="partieEnRecherche">Joindre une partie en attente</button>
+
+    <div class="chargement" [hidden]="!partieEnRecherche">Partie en recherche </div>
 </div>
 
 
