--- a/Course/client/src/app/pisteValidator/pisteValidation.component.html
+++ b/Course/client/src/app/pisteValidator/pisteValidation.component.html
@@ -27,6 +27,6 @@
         </div>
 
 
-        <button class="btn btn-success" type="submit" [class.btn-warning]="buttonText == 'Modifier circuit'" [disabled]="!f.form.valid">Sauvegarder circuit</button>
+        <button class="btn btn-success" type="submit" [disabled]="!f.form.valid">Sauvegarder circuit</button>
     </form>
 </div>
