JGR: fix affichage.

--- a/Course/client/src/app/configurationPartie/configurationPartie.component.html
+++ b/Course/client/src/app/configurationPartie/configurationPartie.component.html
@@ -1,9 +1,9 @@
-<div class="col-md-8 col-md-offset-2">
+<div class="configurationPartieDiv col-md-8 col-md-offset-2">
     <h1>Configuration de partie</h1>
     <label for="nombreTour">Nombre de tours</label>
-    <button class="btn"><i class="fa fa-minus" aria-hidden="true" (click)="diminuerNombreTour()"></i></button>
+    <button class="btn" (click)="diminuerNombreTour()"><i class="fa fa-minus" aria-hidden="true"></i></button>
     <input type="text" [(ngModel)]="nombreDesTours" disabled>
-    <button class="btn"><i class="fa fa-plus" aria-hidden="true" (click)="augmenterNombreTour()"></i></button>
+    <button class="btn" (click)="augmenterNombreTour()"><i class="fa fa-plus" aria-hidden="true" ></i></button>
     <div class="form-group">
         <label for="TypeCourse">Type de course</label>
         <select class="form-control" id="TypeCourse" ngModel name="typeCourse" required>
