--- a/Course/client/src/app/configurationPartie/configurationPartie.component.css
+++ b/Course/client/src/app/configurationPartie/configurationPartie.component.css
@@ -1,4 +1,10 @@
 label,
 h1 {
-    color: #1abc9c;
+    color: white;
+}
+
+.configurationPartieDiv {
+    background-color: rgba(0, 0, 0, 0.5);
+    margin-bottom: 25px;
+    padding-bottom: 35px;
 }
