--- a/Course/client/src/app/pisteValidator/pisteValidation.component.html
+++ b/Course/client/src/app/pisteValidator/pisteValidation.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-8 col-md-offset-2">
+<div class="pisteValidatorDiv col-md-8 col-md-offset-2">
     <button [style.display]="display ? 'none' : 'active'" class="btn btn-primary" (click)="onClick()">Enregistrer Piste</button>
     <form *ngIf="display" ngNativeValidate (ngSubmit)="onSubmit(f)" #f="ngForm">
         <div class="form-group">
@@ -19,11 +19,11 @@
 
         <div class="form-group col-md-0 col-md-offset-0">
             <button type="button" name="nidDePoule" class="btn btn-primary" (click)="ajouterElementDePiste($event)">Nids de poules</button>
-            <button type="button" name="nidDePoule" class="btn btn-secondary" (click)="repositionnerElements($event)">Repositionner</button>
+            <button type="button" name="nidDePoule" class="btnRepositionner btn btn-secondary" (click)="repositionnerElements($event)">Repositionner</button>
             <button type="button" name="flaque" class="btn btn-primary" (click)="ajouterElementDePiste($event)">Flaques d'eau</button>
-            <button type="button" name="flaque" class="btn btn-secondary" (click)="repositionnerElements($event)">Repositionner</button>
+            <button type="button" name="flaque" class="btnRepositionner btn btn-secondary" (click)="repositionnerElements($event)">Repositionner</button>
             <button type="button" name="accelerateur" class="btn btn-primary" (click)="ajouterElementDePiste($event)">Accelerateurs</button>
-            <button type="button" name="accelerateur" class="btn btn-secondary" (click)="repositionnerElements($event)">Repositionner</button>
+            <button type="button" name="accelerateur" class="btnRepositionner btn btn-secondary" (click)="repositionnerElements($event)">Repositionner</button>
         </div>
 
 
