Auto stash before merge of "fixBugJeuxDeCourse" and "origin/fixBugJeuxDeCourse"

--- a/Course/client/src/app/tableauScore/tableauScore.component.html
+++ b/Course/client/src/app/tableauScore/tableauScore.component.html
@@ -15,7 +15,7 @@
             </tr>
         </tbody>
     </table>
-    <div *ngIf="afficher && finCourse">
+    <div *ngIf="afficher">
         <form ngNativeValidate (ngSubmit)="soummettre(f)" #f="ngForm">
             <div class="form-group">
                 <label for="nomPiste">Veuillez Entrer votre nom</label>
