--- a/MotsCroises/client/src/app/choix_partie/choix-partie-view.component.html
+++ b/MotsCroises/client/src/app/choix_partie/choix-partie-view.component.html
@@ -31,7 +31,7 @@
         <button [disabled]="partieEnRecherche">Creer partie</button>
     </form>
     <button (click)="joindrePartieEnAttente()" [disabled]="partieEnRecherche">Joindre une partie en attente</button>
-    <div class="chargement" [hidden]="!partieEnRecherche">Partie en recherche</div>
+    <div class="chargement" [hidden]="!partieEnRecherche">Chargement partie en cours </div>
 </div>
 
 
