--- a/MotsCroises/client/src/app/fin_partie/fin-partie.component.css
+++ b/MotsCroises/client/src/app/fin_partie/fin-partie.component.css
@@ -2,3 +2,29 @@
     display: flex;
     justify-content: space-around;
 }
+
+.chargement {
+    text-align: center;
+}
+
+.chargement:after {
+    overflow: hidden;
+    display: inline-block;
+    vertical-align: bottom;
+    -webkit-animation: ellipsis steps(4, end) 900ms infinite;
+    animation: ellipsis steps(4, end) 1500ms infinite;
+    content: "..."; /* ascii code for the ellipsis character */
+    width: 0px;
+}
+
+@keyframes ellipsis {
+    to {
+        width: 1em;
+    }
+}
+
+@-webkit-keyframes ellipsis {
+    to {
+        width: 1em;
+    }
+}
