YI: Rename methodes

--- a/MotsCroises/client/src/app/trouver_partie/trouver-partie.component.html
+++ b/MotsCroises/client/src/app/trouver_partie/trouver-partie.component.html
@@ -16,7 +16,7 @@
         </div>
     </div>
 
-    <button ng-model="button" (click)="rejoindrePartie()" [disabled]="nomJoueurValable()">Rejoindre Partie</button>
+    <button ng-model="button" (click)="rejoindrePartie()" [disabled]="nomJoueurInvalide()">Rejoindre Partie</button>
 
 </div>
 
